- Pocket PC: lets you access the PC from anywhere ('')
- Rare Candy Box: infinite rare candies essentially
- Edge Kit: leaves your Pokemon at 1 xp to leveling up (to use before Gym Fights)
- Status Kit: inflicts a status of your choosing on the Pokemon (provided it effects them)
- Damage Kit: subtracts 1 HP from the Pokemon (won't go < 1)
Tweaked Professor and Photon's dex checking dialogue to say "caught" instead of "seen" to reflect that they're looking for caught Pokemon not seen
Fixed using Elixir resetting your move selected index
Updated Synchronize's description to say that it also passes a frostbite since it does
Fixed Trick Room/Magic Room having opposite messages when they end
Fixed Fusion Bolt/Fusion Flare not updating the last used move
Fixed a Pokemon getting xp if they faint
Updated all the status methods to allow for null user/foe for the Status Kit
Updated Game Tools to have a "Search by Pokemon" dropdown in the Trainer menu to find all Trainers with that Pokemon
Fixed a Gladipede set being called Ninjakik still in the competitive set
Changed 'A' key in the overworld to be any key item (that the player can assign) instead of just fishing
Draws a Gold star next to the Key Item you have assigned to 'A' in the bag
Fixed Revenge giving the damage boost the opposite way (if you're faster, which is wrong)
Fixed a typo in the evo strings "Torrged" -> "Torgged"
CREATED AN EXCEL FORMAT TRAINER DOCUMENTATION GENERATOR: JUST USE THE Trainers[] checkbox on the Welcome Menu!
Buffed Wormbot and Wormatron's weight to accurately represent the new sprites (100.6 -> 163.6, 185.3 -> 245.3 respectively)
Fixed Assault Vest not applying if you got crit (probably need to rework how crits are handled in the future)
Fixed Froshrog's evo level showing 32 even though it's actually 31
Fixed Scovillains both showing they evolve into "Kerbenero" instead of "Despenero"
Made Hammo 15% -> 13%, Teddull 15% -> 14%, and Seviper 7% -> 10% on Route 25