@@ -1,3 +1,3 @@
 #!/bin/bash
 DIR="$( cd "$( dirname "$0" )" && pwd )"
-java -jar "$DIR/../Resources/PokemonXhenos-v0.8.0.jar"
+java -jar "$DIR/../Resources/PokemonXhenos-v0.8.0-alpha.jar"
